# akka-serial

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  _config.yml  _snippet.md  build.sbt  ghpages.sbt  index.html  release.sbt  roadmap.md  sbt  site.sbt  unidoc.sbt  version.sbt
.ci/: build  sec.gpg.enc
Documentation/: README.md  basics.md  building.md  flow.html  getting-started.md  manual.md  meta.yml  mkbook  testing.md  watching.md
_includes/: header.html  main.html
_layouts/: empty.html  page.html  post.html
core/: build.sbt
core/src/test/resources/: reference.conf
dev/arduino-terminal/: .gitignore  Makefile  README.md
dev/arduino-terminal/ext/: .gitattributes
dev/arduino-terminal/src/: main.cpp
documentation/: basics.md  building.md  developer.html  embedded-building.md  index.html  index.md  manual.html
documentation/2.6/: developer.md  manual.md
documentation/2.6/api/: index.html  index.js
documentation/2.6/api/com/github/: package.html
documentation/2.6/api/index/: index-a.html  index-c.html  index-d.html  index-e.html  index-f.html  index-l.html  index-m.html  index-o.html  index-p.html  index-s.html  index-t.html  index-u.html  index-w.html
documentation/3.0/: developer.md  manual.md
documentation/3.0/api/: index.html  index.js
documentation/3.0/api/ch/: index.html  package.html
documentation/3.0/api/ch/jodersky/: index.html  package.html
documentation/3.0/api/index/: index-a.html  index-b.html  index-c.html  index-d.html  index-e.html  index-f.html  index-i.html  index-j.html  index-l.html  index-m.html  index-n.html  index-o.html  index-p.html  index-r.html  index-s.html  index-t.html  index-u.html  index-w.html
documentation/4.0/: developer.md  manual.md
documentation/4.0/api/: index.js
documentation/4.0/api/akka/serial/: AccessDeniedException.html  PortInUseException.html  PortInterruptedException.html  Serial$$Close$.html  Serial$$Closed$.html  Serial$$Command.html  Serial$$CommandFailed.html  Serial$$Connected.html  Serial$$Event.html  Serial$$Message.html  Serial$$NoAck$.html  Serial$$Open.html  Serial$$Opened.html  Serial$$Received.html  Serial$$Unwatch.html  Serial$$Watch.html  Serial$$Write.html  Serial$.html  SerialExt.html  SerialSettings.html  index.html
documentation/4.1/: manual.md
documentation/4.1/api/: index.html  index.js
documentation/4.1/api/akka/: index.html
documentation/4.2/: manual.md
documentation/4.2/api/: index.html  index.js
documentation/4.2/api/akka/: index.html
downloads/: index.html  index.md
flow-binaries/linux/amd64/: libflow.so.1.0  libflow.so.1.1  libflow.so.2.0  libflow.so.2.1
flow-binaries/linux/arm/: libflow.so.2.1
flow-binaries/linux/i386/: libflow.so.2.1
flow-binaries/mac os x/x86_64/: libflow.jnilib.1.0
flow-binaries/macosx/x86_64/: libflow.jnilib.1.1  libflow.jnilib.2.0  libflow.jnilib.2.1
flow-core/: build.sbt
flow-main/: build.sbt
flow-native/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.mac  aclocal.m4  bootstrap  build.sbt  common.mk  config.h.in  configure  configure.ac  readme.md
flow-native/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
flow-native/debian/: changelog  control  libflow3-jni.dirs  rules
flow-native/include/: com_github_jodersky_flow_internal_NativeSerial.h  flow.h
flow-native/m4/: ax_jni_include_dir.m4  ax_jni_include_dir.m4.m4
flow-native/mac/: Makefile  Readme
flow-native/pkg/: mkpkg
flow-native/platform/posix/: flow.c
flow-native/shared/include/: flow.h
flow-native/src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  configure.ac  flow.h  flow_jni.c
flow-native/src/debian/: changelog  control  copyright  rules
flow-native/src/include/: ch_jodersky_flow_UnsafeSerial__.h
flow-native/src/m4/: ax_jni_include_dir.m4
flow-native/src/pkg/: mkpkg
flow-native/src/platform/windows/: README  flow.c.disabled
flow-native/src/src/: Makefile.am
flow-native/src/src/platform/posix/: flow.c
flow-native/unix/src/: flow.c
flow-samples/: README.md
flow-samples/watcher/: build.sbt
flow-stream/: build.sbt
latest/api/: index.html  index.js
latest/api/com/: package.html
latest/api/com/github/: package.html
latest/api/index/: index-a.html  index-b.html  index-c.html  index-d.html  index-i.html  index-j.html  index-l.html  index-m.html  index-n.html  index-o.html  index-p.html  index-r.html  index-s.html  index-t.html  index-w.html
main/.worksheet/src/: com.github.jodersky.flow.test.scala
main/src/main/c/: com_github_jodersky_flow_low_NativeSerial.h  flow.c
native/lib_native/x86_64-darwin/: libakkaserial1.dylib  libflow4.dylib
native/src/: .gitignore  CMakeLists.txt  akka_serial_jni.c  flow_jni.c  readme.md
native/src/include/: akka_serial.h  akka_serial_sync_UnsafeSerial.h  akka_serial_sync_UnsafeSerial__.h  ch_jodersky_akka_serial_sync_UnsafeSerial.h  ch_jodersky_akka_serial_sync_UnsafeSerial__.h  ch_jodersky_flow_UnsafeSerial.h  flow.h
native/src/platform/posix/: akka_serial.c  flow.c
native/src/platform/windows/: README
project/: Bintray.scala.notyet  Build.scala  Dependencies.scala  FlowBuild.scala  JNIBuild.scala  Jni.scala  NativeBuild.scala  NativeSettings.foo  Publish.scala  Release.scala  jni.scala  native.scala  nativeFat.scala  nativefat.scala  nativefat.scala.disabled  nativepack.scala  plugins.sbt  uniqueVersion.scala
samples/: README.md
samples/arduino/: README
samples/rwc/: README
site/jekyll/: _config.yml  _snippet.md  index.html
site/jekyll/_data/: current.json
site/jekyll/_data/releases/: current.json
site/jekyll/_includes/: header.html  main.html
site/jekyll/_layouts/: page-full.html
site/jekyll/assets/stylesheets/: main.css  solarized-dark.css
site/jekyll/documentation/: developer.md  index.md  manual.md
site/jekyll/downloads/: _snippet.md  index.html  index.md
src/main/c/: com_github_jodersky_flow_NativeSerial.h  flow-aio.c  flow-epoll.c  flow-signal.c
src/main/native/: flow.c  flow.h
stream/: build.sbt
sync/: build.sbt
(+410 files in other folders)
